--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "cucumber-js --format json:features/cucumber.json",
     "build": "tsc --project ./tsconfig.json",
     "build-watch": "tsc --watch --project ./tsconfig.json",
-    "build-test": "tsc --project ./features/tsconfig.json",
-    "build-test-watch": "tsc --watch --project ./features/tsconfig.json",
+    "build-test": "tsc --project ./features/stepdefs/tsconfig.json",
+    "build-test-watch": "tsc --watch --project ./features/stepdefs/tsconfig.json",
     "lint": "eslint ."
   },
   "author": "Tobias Klauenberg",
@@ -23,6 +23,7 @@
     "@serenity-js/rest": "^2.19.10",
     "@serenity-js/serenity-bdd": "^2.19.10",
     "@types/express": "^4.17.10",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^13.13.39",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
