change typescript config for test

--- a/features/stepdefs/tsconfig.json
+++ b/features/stepdefs/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "declaration": false,
+    "strict": false,
+    "resolveJsonModule": true
+  },
   "include": [
     "**/*.ts"
   ]
