--- a/package.json
+++ b/package.json
@@ -4,33 +4,40 @@
   "description": "Simple User Management Service",
   "main": "src/index.js",
   "scripts": {
-    "test": "cucumber-js --format json:features/cucumber.json",
+    "test": "failsafe clean test:update-serenity build:test test:acceptance test:report",
+    "clean": "rimraf target",
+    "test:update-serenity": "serenity-bdd update",
+    "test:acceptance": "cucumber-js --format @serenity-js/cucumber",
+    "test:report": "serenity-bdd run",
+    "verify": "npm test",
     "build": "tsc --project ./tsconfig.json",
-    "build-watch": "tsc --watch --project ./tsconfig.json",
-    "build-test": "tsc --project ./features/stepdefs/tsconfig.json",
-    "build-test-watch": "tsc --watch --project ./features/stepdefs/tsconfig.json",
+    "build:watch": "tsc --watch --project ./tsconfig.json",
+    "build:test": "tsc --project ./features/stepdefs/tsconfig.json",
+    "build:test-watch": "tsc --watch --project ./features/stepdefs/tsconfig.json",
     "lint": "eslint ."
   },
   "author": "Tobias Klauenberg",
   "license": "MIT",
   "devDependencies": {
     "@cucumber/cucumber": "^7.0.0",
-    "@serenity-js/assertions": "^2.22.0",
-    "@serenity-js/console-reporter": "^2.22.0",
-    "@serenity-js/core": "^2.22.0",
-    "@serenity-js/cucumber": "^2.22.0",
-    "@serenity-js/local-server": "^2.22.0",
-    "@serenity-js/rest": "^2.22.0",
-    "@serenity-js/serenity-bdd": "^2.22.0",
+    "@serenity-js/assertions": "^2.23.0",
+    "@serenity-js/console-reporter": "^2.23.0",
+    "@serenity-js/core": "^2.23.0",
+    "@serenity-js/cucumber": "^2.23.0",
+    "@serenity-js/local-server": "^2.23.0",
+    "@serenity-js/rest": "^2.23.0",
+    "@serenity-js/serenity-bdd": "^2.23.0",
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.25",
-    "eslint": "^7.19.0",
+    "@types/node": "^14.14.31",
+    "eslint": "^7.20.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "express": "^4.17.1",
+    "npm-failsafe": "^0.4.3",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.5"
   }
 }
