--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,12 @@
 {
   "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
     "**/.DS_Store": true,
-    "src/**/*.js": true,
-    "src/**/*.js.map": true,
-    "src/**/*.d.ts": true,
-    "features/**/*.js": true,
-    "features/**/*.js.map": true
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.svn": true,
+    "**/*.js": { "when": "$(basename).ts" },
+    "**/*.js.map": true,
+    "**/CVS": true
   },
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "cucumberautocomplete.syncfeatures": "features/**/*.feature",
