Rest Test Implementation with mock

--- a/features/stepdefs/tsconfig.json
+++ b/features/stepdefs/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "declaration": false,
     "strict": false,
+    "allowJs": true,
+    "outDir": "./dist",
+    "resolveJsonModule": true,
     "module": "CommonJS",
     "moduleResolution": "Node"
   },
