base cucumber config and better feature file

--- a/features/stepdefs/tsconfig.json
+++ b/features/stepdefs/tsconfig.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "declaration": false,
     "strict": false,
-    "resolveJsonModule": true
+    "module": "CommonJS",
+    "moduleResolution": "Node"
   },
   "include": [
     "**/*.ts"
-  ]
+, "../../cucumber.ts"  ]
 }
