--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "failsafe clean test:update-serenity build:test test:acceptance test:report",
     "clean": "rimraf target",
     "test:update-serenity": "serenity-bdd update",
-    "test:acceptance": "cucumber-js --format @serenity-js/cucumber",
+    "test:acceptance": "failsafe test:backend:mock test:rest:mock",
+    "test:backend:mock": "cucumber-js --profile backendMock",
+    "test:rest:mock": "cucumber-js --profile restMock",
     "test:report": "serenity-bdd run",
     "verify": "npm test",
     "build": "tsc --project ./tsconfig.json",
     "build:watch": "tsc --watch --project ./tsconfig.json",
     "build:test": "tsc --project ./features/stepdefs/tsconfig.json",
-    "build:test-watch": "tsc --watch --project ./features/stepdefs/tsconfig.json",
+    "build:test:watch": "tsc --watch --project ./features/stepdefs/tsconfig.json",
     "lint": "eslint ."
   },
   "author": "Tobias Klauenberg",
