--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "test": "failsafe clean test:update-serenity build:test test:acceptance test:report",
-    "clean": "rimraf target",
+    "clean": "rimraf target reports",
     "test:update-serenity": "serenity-bdd update",
     "test:acceptance": "failsafe test:backend:mock test:rest:mock",
     "test:backend:mock": "cucumber-js --profile backendMock",
     "test:rest:mock": "cucumber-js --profile restMock",
-    "test:report": "serenity-bdd run",
+    "test:report": "failsafe test:report:backend:mock test:report:rest:mock",
+    "test:report:backend:mock": "serenity-bdd run --source target/backendMock --destination reports/backendMock --project Usermanagement-Service",
+    "test:report:rest:mock": "serenity-bdd run --source target/restMock --destination reports/restMock --project Usermanagement-Service",
     "verify": "npm test",
     "build": "tsc --project ./tsconfig.json",
     "build:watch": "tsc --watch --project ./tsconfig.json",
