--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@serenity-js/local-server": "^2.24.1",
     "@serenity-js/rest": "^2.24.1",
     "@serenity-js/serenity-bdd": "^2.24.1",
+    "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.32",
@@ -38,10 +39,13 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "express": "^4.17.1",
     "npm-failsafe": "^0.4.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "config": "^3.3.6",
+    "express": "^4.17.1"
   }
 }
